--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -44,7 +44,7 @@ const allPostsByDate = sortMDByDate(allPosts).slice(0, MAX_POSTS)
             <Icon name='github' class='size-5' slot='icon' />
           </Label>
           <Label title='LinkedIn' as='a' href='https://www.linkedin.com/in/david-alonsodd' target='_blank'>
-            <Icon name='linkedin' class='size-5' slot='icon' />
+            <Icon name='link' class='size-5' slot='icon' />
           </Label>
         </div>
       </div>
