--- a/src/pages/projects/index.astro
+++ b/src/pages/projects/index.astro
@@ -55,34 +55,27 @@ const headings = [
         ]
       },
       {
-        name: '🌱 Digital Garden',
-        description: 'A personal Digital Garden using DG Docs on obsidian.md.',
+        name: '🧰 Toolbox installer',
+        description: 'A tool for generating scripts for installing packages on multiple OS.',
         links: [
-          { type: 'site', href: 'https://dg-docs.ole.dev/' }
+          { type: 'site', href: 'https://david7ce.github.io/toolbox-installer/' }
         ]
       },
       {
-        name: '📚 Documentation Wiki',
-        description: 'A documentation wiki made with docsify.',
+        name: '📚 Wiki of Computing',
+        description: 'A documentation wiki made with Obsidian + Quartz.',
         links: [
-          { type: 'site', href: 'https://wiki-docs.github.io/webdev-docs/#/' },
-          { type: 'doc', href: 'https://docsify.js.org/#/' }
+          { type: 'site', href: 'https://compuwiki.github.io/' },
+          { type: 'doc', href: 'https://quartz.jzhao.xyz/' }
         ]
       },
       {
-        name: '📝 Personal Blog Site',
-        description: 'A personal blog site using first using an HUGO template then Astro JS.',
+        name: '🌱 Wiki of Cosmos',
+        description: 'A cosmological wiki using Obsidian.md with <a href="https://dg-docs.ole.dev/" target="_blank" rel="noopener">DG Docs</a>.',
         links: [
-          { type: 'github', href: 'https://github.com/adityatelange/hugo-PaperMod' }
+          { type: 'site', href: 'https://wikiterra.github.io/' }
         ]
       },
-      {
-        name: '📖 Personal Wiki',
-        description: 'A personal wiki using Feather Wiki.',
-        links: [
-          { type: 'site', href: 'https://feather.wiki/' }
-        ]
-      },     
     ]}
   />
 
