Fix: Update tech stack tools by replacing SQL and XML with CSS3 and adding Firebase and GitHub Pages

--- a/src/pages/stack/index.astro
+++ b/src/pages/stack/index.astro
@@ -256,22 +256,16 @@ const headings = [
         icon: import('@/assets/software/js.svg?raw')
       },
       {
-        name: 'SQL',
-        description: 'Structured Query Language',
-        href: 'https://www.w3schools.com/sql/',
-        icon: import('@/assets/software/sql.svg?raw')
-      },
-      {
-        name: 'XML',
-        description: 'Markup Language',
-        href: 'https://www.w3.org/XML/',
-        icon: import('@/assets/software/xml.svg?raw')
-      },
-      {
         name: 'JSON',
         description: 'Data Interchange Format',
         href: 'https://www.json.org/json-en.html',
         icon: import('@/assets/software/json.svg?raw')
+      },
+      {
+        name: 'CSS3',
+        description: 'Styling Language',
+        href: 'https://developer.mozilla.org/en-US/docs/Web/CSS',
+        icon: import('@/assets/software/css.svg?raw')
       },
       {
         name: 'HTML5',
@@ -286,10 +280,10 @@ const headings = [
         icon: import('@/assets/software/markdown.svg?raw')
       },
       {
-        name: 'CSS3',
-        description: 'Styling Language',
-        href: 'https://developer.mozilla.org/en-US/docs/Web/CSS',
-        icon: import('@/assets/software/css.svg?raw')
+        name: 'XML',
+        description: 'Markup Language',
+        href: 'https://www.w3.org/XML/',
+        icon: import('@/assets/software/xml.svg?raw')
       }
     ]}
   />
@@ -379,16 +373,10 @@ const headings = [
         icon: import('@/assets/software/nginx.svg?raw')
       },
       {
-        name: 'XAMPP',
-        description: 'Development Stack',
-        href: 'https://www.apachefriends.org/',
-        icon: import('@/assets/software/xampp.svg?raw')
-      },
-      {
-        name: 'GitHub',
-        description: 'Code Hosting',
-        href: 'https://github.com/',
-        icon: import('@/assets/software/github.svg?raw')
+        name: 'Firebase',
+        description: 'Backend Platform',
+        href: 'https://firebase.google.com/',
+        icon: import('@/assets/software/firebase.svg?raw')
       },
       {
         name: 'Supabase',
@@ -397,10 +385,16 @@ const headings = [
         icon: import('@/assets/software/supabase.svg?raw')
       },
       {
-        name: 'Firebase',
-        description: 'Backend Platform',
-        href: 'https://firebase.google.com/',
-        icon: import('@/assets/software/firebase.svg?raw')
+        name: 'GitHub Pages',
+        description: 'Code Hosting',
+        href: 'https://github.com/',
+        icon: import('@/assets/software/github.svg?raw')
+      },
+      {
+        name: 'XAMPP',
+        description: 'Development Stack',
+        href: 'https://www.apachefriends.org/',
+        icon: import('@/assets/software/xampp.svg?raw')
       }
     ]}
   />
