--- a/src/pages/en/about/index.astro
+++ b/src/pages/en/about/index.astro
@@ -1,5 +1,5 @@
 ---
-import Comment from '../../components/Comment.astro'
+import Comment from '../../../components/Comment.astro'
 import PageLayout from '@/layouts/CommonPage.astro'
 
 const headings = [
