--- a/src/components/PostPreviewI18n.astro
+++ b/src/components/PostPreviewI18n.astro
@@ -1,24 +1,27 @@
 ---
 import { Image } from 'astro:assets'
 import { render, type CollectionEntry } from 'astro:content'
+import type { HTMLTag, Polymorphic } from 'astro/types'
 import { cn } from '../../packages/pure/utils'
 import { FormattedDate, Icon } from '../../packages/pure/components/user'
 import { getLangFromUrl } from '../i18n/utils'
 
-interface Props {
+type Props<Tag extends HTMLTag> = Polymorphic<{ as: Tag }> & {
   post: CollectionEntry<'blog'>
   detailed?: boolean
   class?: string
 }
 
-const { post, detailed = false, class: className } = Astro.props
+const { as: Tag = 'div', post, detailed = false, class: className } = Astro.props
 const { id, data } = post
 
 const { remarkPluginFrontmatter } = await render(post)
 const postDate = data.updatedDate ?? data.publishDate
 
 const lang = getLangFromUrl(Astro.url)
-const href = `/${lang}/blog/${id}`
+// Use slug if defined, otherwise fallback to id
+const postSlug = data.slug || id
+const href = `/${lang}/blog/${postSlug}`
 ---
 
 <li
@@ -54,7 +57,7 @@ const href = `/${lang}/blog/${id}`
 
     <FormattedDate class='min-w-[95px] py-1 text-xs' date={postDate} />
 
-    <div class='z-10 flex-grow'>
+    <Tag class='z-10 flex-grow'>
       <div class='flex justify-between'>
         <div class={cn(detailed && 'font-medium')}>
           {data.draft && <span class='text-red-500'>(Draft) </span>}
@@ -113,7 +116,7 @@ const href = `/${lang}/blog/${id}`
           </>
         )
       }
-    </div>
+    </Tag>
   </a>
 </li>
 
